      #227153)
  * reportbug
    - explained how to reuse a saved file (generated by not submitting a bug
      report); (Closes: #328531)
    - (get_other_package_name) even if 'kernel' pseudo-package is chosen, we
      will default on 'linux-image'
  * reportbug.1
    - fixed a little typo in "-i FILE, --include=FILE" options, as suggested
      in #328531

  [ Ben Finney ]
  * Makefile, */module.mk
    - Begin a modular makefile structure for package development and build
      tasks
  * test/*
    - Begin unit test suite
    - Add make target so 'make test' runs the unit test suite
  * debian/control
    - Build-Depends-Indep on 'python-nose' for the unit test suite
  * debian/copyright
    - Convert to machine-parseable format.
  * README.developers
    - Describe new unit test suite capabilities
    - Describe new makefile targets 'test', 'test-continuous', 'coverage',
      'pyflakes', 'pylint'
  * reportbug
    - Remove ancient workaround for 'import site' (originally introduced
      for bug #290043), no longer needed in any supported Python version.
    - Clean up temp file always during mail message generation
      (closes: #340560).

  [ Y Giridhar Appaji Nag ]
  * Use singular they instead of he/she.  Thanks Adeodato Simó
    <dato@net.com.org.es> (Closes: #458356)
  * Add security-tracker to the list of pseudo-packages, re-org the list to be
    in alphabetical order (like it was earlier).
  * Updated French manpage, thanks Sylvain Cherrier <sylvain.cherrier@free.fr>
    (Closes: #481775)
  * Specified local path for GPL license

 -- Sandro Tosi <matrixhasu@gmail.com>  Wed, 21 May 2008 23:17:56 +0200

reportbug (3.39-0.1) unstable; urgency=low

  * Non-maintainer upload
  * Add templates for ftp.debian.org removal (RM) requests (Closes: #459333)
  * Add a -P option to allow setting pseudo-headers, useful for setting
    usertags.  Thanks Lucas Nussbaum <lucas@lucas-nussbaum.net> for the patch
    (Closes: #445144)