@@ -47,6 +47,8 @@ reportbug (3.40) UNRELEASED; urgency=low
   * reportbug.1
     - fixed a little typo in "-i FILE, --include=FILE" options, as suggested
       in #328531
+  * checks/compare_pseudo-pkgs_lists.py
+    - added to compare local pseudo-packages list with the one on ftp-master
 
   [ Ben Finney ]
   * Makefile, */module.mk
@@ -68,6 +70,8 @@ reportbug (3.40) UNRELEASED; urgency=low
       for bug #290043), no longer needed in any supported Python version.
     - Clean up temp file always during mail message generation
       (closes: #340560).
+  * debianbts.py
+    - Put ITP template in named module attribute for access elsewhere.
 
   [ Y Giridhar Appaji Nag ]
   * Use singular they instead of he/she.  Thanks Adeodato Simó
@@ -78,7 +82,7 @@ reportbug (3.40) UNRELEASED; urgency=low
     (Closes: #481775)
   * Specified local path for GPL license
 
- -- Sandro Tosi <matrixhasu@gmail.com>  Wed, 21 May 2008 23:17:56 +0200
+ -- Sandro Tosi <matrixhasu@gmail.com>  Thu, 22 May 2008 00:37:02 +0200
 
 reportbug (3.39-0.1) unstable; urgency=low
 
